--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
-    "jest": "^27.4.7"
+    "jest": "^27.4.7",
+    "optimize-css-assets-webpack-plugin": "^5.0.4"
   }
 }
