--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "core-js": "^3.6.5",
+    "css-minimizer-webpack-plugin": "^3.4.1",
     "jest": "^27.4.7",
-    "optimize-css-assets-webpack-plugin": "^5.0.4"
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "sockjs-client": "^1.5.2"
   }
 }
