--- a/package.json
+++ b/package.json
@@ -33,8 +33,6 @@
     "html-webpack-plugin": "^4.5.1",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^1.3.3",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "css-minimizer-webpack-plugin": "^3.4.1",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.0.3",
     "url-loader": "^4.1.1",
@@ -47,6 +45,7 @@
     "core-js": "^3.6.5",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
+    "mini-css-extract-plugin": "^1.3.3",
     "jest": "^27.4.7",
     "postcss": "^8.4.5",
     "sockjs-client": "^1.5.2"
