--- a/package.json
+++ b/package.json
@@ -1,51 +1,50 @@
 {
-  "name": "webpack5",
+  "name": "Home-work",
   "version": "1.0.0",
-  "description": "",
+  "description": "Game",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.dev.js",
+    "start": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint .",
-    "test": "jest",
-    "coverage": "jest --coverage",
+    "lint-fix": "eslint . --fix",
+    "test": "jest --testPathPattern=./src/ --coverage",
+    "coverage": "jest --testPathPattern=./src/ --coverage",
     "doc": "jsdoc -c jsdoc.conf.json",
-    "preshow:coverage": "npm run coverage",
+    "preshow:coverage": "yarn run coverage",
     "show:coverage": "live-server coverage/lcov-report",
-    "preshow:doc": "npm run doc",
+    "preshow:doc": "yarn run doc",
     "show:doc": "live-server doc",
-    "preshow:dist": "npm run build",
+    "preshow:dist": "yarn run build",
     "show:dist": "live-server dist"
   },
-  "author": "coursar",
+  "author": "Vikkelas",
   "license": "MIT",
+  "dependencies": {
+    "core-js": "^3.7.0"
+  },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^5.0.1",
-    "eslint": "^7.32.0",
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.1",
+    "css-loader": "^3.6.0",
+    "eslint": "^7.13.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
-    "html-webpack-plugin": "^4.5.1",
+    "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.3",
     "live-server": "^1.2.1",
-    "mini-css-extract-plugin": "^1.3.3",
-    "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.0.3",
-    "url-loader": "^4.1.1",
+    "mini-css-extract-plugin": "^1.3.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "terser-webpack-plugin": "^1.4.5",
     "webpack": "^4.44.2",
-    "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.1",
-    "webpack-merge": "^5.7.3"
-  },
-  "dependencies": {
-    "core-js": "^3.6.5",
-    "css-minimizer-webpack-plugin": "^3.4.1",
-    "jest": "^27.4.7",
-    "postcss": "^8.4.5",
-    "sockjs-client": "^1.5.2"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-merge": "^4.2.2",
+    "yarn": "^1.22.10"
   }
 }
