--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,27 +1,28 @@
-image: Ubuntu1804 # образ для сборки
+image: Ubuntu1804  # образ для сборки
 
-stack: node 10  # окружение
+stack: node 12  # окружение
 
 branches:
   only:
     - main  # ветка git
+    - master  # ветка git
 
 cache: node_modules  # кеширование
 
 install:
-  - npm install  # команда установки зависимостей
+  - yarn install  # команда установки зависимостей
 
 build: off  # отключаем встроенную в appveyor систему сборки
 
 build_script:
-  - npm run build   # команда сборки
+  - yarn run build   # команда сборки
 
 test_script:
-  - npm run lint # скрипт тестирования
+  - yarn run lint # скрипт тестирования
 
 deploy_script:  # скрипт развёртывания
   - git config --global credential.helper store
-  - git config --global user.name vikkelas
-  - git config --global user.email bass89@mail.ru
+  - git config --global user.name AppVeyor
+  - git config --global user.email ci@appveyor.com
   - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
   - npx push-dir --dir=dist --branch=gh-pages --force --verbose
