--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,10 +6,19 @@
      "jest": true
   },
   "rules": {
+    "Unexpected unnamed function": 0,
+    "class-methods-use-this": 0,
+    "no-loop-func": 0,
     "no-restricted-syntax": [
       "error",
       "LabeledStatement",
       "WithStatement"
+    ],
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": true
+      }
     ]
   }
 }
