--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,19 +6,15 @@
      "jest": true
   },
   "rules": {
-    "Unexpected unnamed function": 0,
-    "class-methods-use-this": 0,
-    "no-loop-func": 0,
+    "no-console": "off",
     "no-restricted-syntax": [
       "error",
       "LabeledStatement",
       "WithStatement"
-    ],
-    "import/no-extraneous-dependencies": [
+    ],    
+    "linebreak-style": [
       "error",
-      {
-        "devDependencies": true
-      }
-    ]
+      "unix"
+  ]
   }
 }
