--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,20 +4,20 @@ stack: node 10  # окружение
 
 branches:
   only:
-    - master  # ветка git
+    - main  # ветка git
 
 cache: node_modules  # кеширование
 
 install:
-  - npm install  # команда установки зависимостей
+  - yarn install  # команда установки зависимостей
 
 build: off  # отключаем встроенную в appveyor систему сборки
 
 build_script:
-  - npm run build   # команда сборки
+  - yarn run build   # команда сборки
 
 test_script:
-  - npm run lint && npm test  # скрипт тестирования
+ - yarn run lint # скрипт тестирования
 
 deploy_script:  # скрипт развёртывания
   - git config --global credential.helper store
